--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.12",
+    "@xterm/addon-fit": "^0.10.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "tailwindcss": "^4.1.12",
     "xterm": "^5.3.0"
   },
   "devDependencies": {
